# curobo-sq

./: .gitignore  CLAUDE.md  README.md
curobo/: setup.py
curobo/examples/isaac_sim/: NvStreamer-20260313-150402.etli  NvStreamer-20260313-150426.etli  NvStreamer-20260313-150434.etli  NvStreamer-20260313-150459.etli  NvStreamer-20260313-150707.etli  NvStreamer-20260313-150741.etli  NvStreamer-20260313-150803.etli  NvStreamer-20260313-151906.etli  NvStreamer-20260313-151928.etli  NvStreamer-20260313-151951.etli  NvStreamer-20260313-152041.etli  NvStreamer-20260313-152103.etli  NvStreamer-20260313-152106.etli  NvStreamer-20260313-152115.etli  collision_checker.py  motion_gen_reacher.py  motion_gen_reacher_superquadrics.py
curobo/src/curobo/curobolib/: geom.py
curobo/src/curobo/curobolib/cpp/: geom_cuda.cpp  superquadric_distance_kernel.cu  superquadric_radial_distance_kernel.cu
curobo/src/curobo/geom/: types.py
curobo/src/curobo/geom/sdf/: world.py  world_blox.py  world_mesh.py  world_voxel.py
curobo/src/curobo/graph/: graph_base.py
curobo/src/curobo/wrap/reacher/: motion_gen.py
curobo/tests/: test_gjk_retract.py  test_retract_collision.py  test_rollout_spheres.py  test_sq_clpt.py  test_sq_motion_gen_headless.py  test_sq_rotation.py  test_sq_taubin_grad.py  test_start_state.py
openGJK/gpu/: CMakeLists.txt  README.md  opengjk_gpu.cu
openGJK/gpu/examples/superquadrics/: CMakeLists.txt  main.cu
openGJK/gpu/include/: openGJK_GPU.h
radial/: radial_distances.cu
superdec/: export_for_isaacsim.py  superdec_to_curobo_world.py  test_export.py
(+4 files in other folders)
